--- a/index.html
+++ b/index.html
@@ -93,11 +93,103 @@
                 <h2>Pricing plans that scale</h2>
                 <p>Simple, transparent pricing that grows with you. Try any plan free for 30 days.</p>
                 <div class="pricingCards">
-                    
+                    <div class="pricingCard">
+                        <img src="images/Featured icon.svg" alt="jh">
+                        <h4 class="pricingHeader">Basic plan</h4>
+                        <h3>$10/mth</h3>
+                        <p>Billed annually.</p>
+                        <div class="benefits">
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+
+                        </div>
+                        <button class="startingButton">
+                            get started
+                        </button>
+                    </div>
+                    <div class="pricingCard">
+                        <img src="images/Featured icon.svg" alt="jh">
+                        <h4 class="pricingHeader">Buisness plan</h4>
+                        <h3>$20/mth</h3>
+                        <p>Billed annually.</p>
+                        <div class="benefits">
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+                            <div class="benefit">
+                                <img src="images/Check icon.svg" alt="hgcj">
+                                <p>Access to all basic features</p>
+                            </div>
+
+                        </div>
+                        <button class="startingButton">
+                            get started
+                        </button>
+                    </div>
                 </div>
+            </div>
+            <div class="reneeWellsFrame">
+                <div class="reneeWells">
+                    <div class="quoteFrame">
+                        <img src="images/Stars.svg" alt="dadwad">
+                        <h2>Love the simplicity of the service and the prompt customer support. We can’t imagine working
+                            without it.</h2>
+                    </div>
+                    <h4>— Renee Wells</h4>
+                    <p>Product Designer, Quotient</p>
+                    <img src="images/Pagination dot group.svg" alt="hbtdu">
+                </div>
+                <img src="images/Image.svg" alt="khgcyjc">
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footerWrapper">
+            <div class="footer">
+                <img src="images/Frame 76.svg" alt="fishi">
+                <div class="footerP">
+                    <p>Overview</p>
+                    <p>Features</p>
+                    <p>Pricing</p>
+                    <p>Careers</p>
+                    <p>Help</p>
+                    <p>Privacy</p>
+                </div>
+                <p>&copy; 2077 Untitled UI</p>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
